<resources>
    <string name="app_name">Amplifted</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlist_btn">Playlist</string>
    <string name="back_button">Back Button</string>
    <string name="favorites_icon">Favorites Icon</string>
    <string name="song_name">Song Name</string>
    <string name="start_time">00:00</string>
    <string name="playtime">loading…</string>
    <string name="song_repeat">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="pause_or_play">Pause or Play</string>
    <string name="next_song">Next Song</string>
    <string name="previous_song">Previous Song</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="register_image">Register Image</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="enter_email_id">Enter Email ID.</string>
    <string name="enter_user_name">Enter User Name.</string>
    <string name="retype_above_password">Retype Above Password</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome,</string>
    <string name="to_world_of_music">To World Of Music</string>
    <string name="nav_menu_icon">Welcome,</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="search_song">Search Song</string>
    <string name="share_song">Share Song</string>
    <string name="now_playing_fragment">Now Playing fragment</string>
    <string name="album_art">Album Art</string>
    <string name="share">Share</string>
    <string name="recently_played_songs">Recently Played Songs</string>
    <string name="recent">Recent</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="feedback">Feedback</string>
    <string name="github_page_link">Github Page Link</string>
    <string name="send">SEND</string>
    <string name="email_id_optional">Email ID (optional)</string>
    <string name="feedback_topic_i_e_suggestions_errors_etc">Feedback Topic i.e. Suggestions, Errors, etc.</string>
    <string name="subject">Subject</string>
    <string name="appearance">Appearance</string>
    <string name="app_version">App Version :</string>
    <string name="sort_by">Sort By</string>
    <string name="name_asc">By Name in Ascending</string>
    <string name="name_desc">By Name in Descending</string>
    <string name="date_desc">Date Modified (Latest)</string>
    <string name="date_asc">Date Modified (Oldest)</string>
    <string name="to_amplifted">to Amplifted</string>
    <string name="music_note_icon">Music Note Icon</string>
    <string name="enjoy_listening">Enjoy Listening</string>
    <string name="notice">Notice!</string>
    <string name="permission_request">This App Requires Permission to Read Audio Files From Storage Please Grant Permission For Proper working of The Application</string>
    <string name="give_permission">Give Permission</string>
    <string name="light_theme">Light Mode</string>
    <string name="dark_theme">Dark Mode</string>
    <string name="system_theme">System Default</string>
</resources>