<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">



    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/albumImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="25dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="#03A9F4" />

    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:singleLine="true"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/previousSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/previous_song"
            app:icon="@drawable/previous_icon"
            app:iconSize="40dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pausePlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:contentDescription="@string/pause_or_play"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            app:iconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginVertical="5dp"
            android:contentDescription="@string/next_song"
            app:icon="@drawable/next_icon"
            app:iconSize="40dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/progressDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_time"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarPA"
            app:layout_constraintEnd_toStartOf="@+id/seekBarPA"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/seekBarPA" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toStartOf="@+id/duration"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/progressDuration"
            app:layout_constraintTop_toTopOf="@+id/duration" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/playtime"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seekBarPA"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <ImageButton
            android:id="@+id/repeatSong"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/song_repeat"
            android:foregroundGravity="bottom"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/repeat_icon"
            app:layout_constraintBottom_toBottomOf="@+id/shuffleButton"
            app:layout_constraintEnd_toStartOf="@+id/shuffleButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/shuffleButton"
            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/equalizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/equalizer_btn"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/equalizer_icon"
            app:layout_constraintBottom_toBottomOf="@+id/timer"
            app:layout_constraintEnd_toStartOf="@+id/timer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shuffleButton"
            app:layout_constraintTop_toTopOf="@+id/timer"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/timer_btn"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/timer_icon"

            app:layout_constraintBottom_toBottomOf="@+id/shareButton"
            app:layout_constraintEnd_toStartOf="@+id/shareButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/equalizer"
            app:layout_constraintTop_toTopOf="@+id/shareButton"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_song"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/share_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/timer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/shuffleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/shuffle_btn"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/shuffle_icon"
            app:layout_constraintBottom_toBottomOf="@+id/equalizer"
            app:layout_constraintEnd_toStartOf="@+id/equalizer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/repeatSong"
            app:layout_constraintTop_toTopOf="@+id/equalizer"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>