<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="?attr/colorPrimaryContainer"
    tools:context=".NowPlaying">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/nowPlayingAlbumArt"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:src="@drawable/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:shapeAppearanceOverlay="@style/curved"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/nowPlayingSongName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:singleLine="true"
            android:text="@string/song_name"
            android:textColor="#212121"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nowPlayingPlayPause"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toEndOf="@+id/nowPlayingAlbumArt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.229" />

        <TextView
            android:id="@+id/nowPlayingArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textColor="#212121"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nowPlayingSongName"
            app:layout_constraintTop_toBottomOf="@+id/nowPlayingSongName" />

        <ImageButton
            android:id="@+id/nowPlayingPlayPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/pause_or_play"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/pause_icon_notification"
            app:tint="#F80000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nowPlayingNext"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/nowPlayingNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/next_song"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/next_icon_notification"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#00897B"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>